# funkyfunctional

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  definition.md  definition.txt  fac.sfl  hot-reload-rust.sh  package-lock.json  package.json  prelude.sfl  starter_program.sfl  test.sfl  wtf.sfl
design/: 1.sfl  (+1 more)
sfl_lib/: Cargo.toml
sfl_lib/src/: inbuilts.rs  lib.rs  lib_test.rs  prelude.rs  types.rs  types2.rs  wasm_utils.rs
sfl_lib/src/ast/: better_ast.rs  building.rs  diff_tests.rs  mod.rs  node.rs  output.rs  transform.rs
sfl_lib/src/find_redexes/: mod.rs  pattern_match.rs  prelude.sfl  reduce.rs  reduce_test.rs  replace.rs
sfl_lib/src/find_redexes/tests/: mod.rs  reduce_test.rs  replace_test.rs
sfl_lib/src/functions/: inbuilt_arith.rs  inbuilt_control_flow.rs  inbuilt_io.rs  mod.rs  product.rs
sfl_lib/src/functions/test/: inbuilt_arith_test.rs  mod.rs
sfl_lib/src/inbuilts/: arith.rs  control_flow.rs  mod.rs
sfl_lib/src/inbuilts/test/: inbuilt_arith_test.rs  mod.rs
sfl_lib/src/parser/: ast.rs  bound.rs  lexer.rs  mod.rs  parser.rs  prelude.rs  token.rs
sfl_lib/src/parser/ast/: building.rs  mod.rs  output.rs  transform.rs
sfl_lib/src/parser/tests/: laziness_test.rs  lexer_test.rs  mod.rs  parser_test.rs  types_test.rs
sfl_lib/src/parsing/: lexer.rs  mod.rs  token.rs
sfl_lib/src/parsing/parser/: mod.rs  parse_expression.rs  parse_match.rs  parse_types.rs
sfl_lib/src/types/: mod.rs  type_checker.rs  type_checker_test.rs
sfl_lib/tests/: lexer_test.rs  types_test.rs
sfl_lib/tests/parser/: parser_basic_test.rs
(+101 files in other folders)
