[package]
name = "sfl_lib"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
rand = "0.8.5"

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]
